added dataservice factory and repaired postgreSQL
